--- a/index.html
+++ b/index.html
@@ -18,41 +18,15 @@
                     </svg>
                     <span class="header-logo-title">Waxom</span>
                 </a>
+                <label for="toggle-1" class="toggle-menu">
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </label>
+                    <input type="checkbox" id="toggle-1">
                 <nav class="header-navbar">
-                    <div class="burger">
-                        <div class="menu-toggle">
-                            <input type="checkbox" class="menu-burger-input" />
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <ul class="burger-menu-elem">
-                                <a href="#" class="burger-menu-links">
-                                    <li class="burger-menu-items">Home</li>
-                                </a>
-                                <a href="#" class="burger-menu-links">
-                                    <li class="burger-menu-items">About&nbsp;us</li>
-                                </a>
-                                <a href="#" class="burger-menu-links">
-                                    <li class="burger-menu-items">Portfolio</li>
-                                </a>
-                                <a href="#" class="burger-menu-links">
-                                    <li class="burger-menu-items">Features</li>
-                                </a>
-                                <a href="#" class="burger-menu-links">
-                                    <li class="burger-menu-items">Blog</li>
-                                </a>
-                                <a href="#" class="burger-menu-links">
-                                    <li class="burger-menu-items">Pricing</li>
-                                </a>
-                                <a href="#" class="burger-menu-links">
-                                    <li class="burger-menu-items">Shortcodes</li>
-                                </a>
-                                <a href="#" class="burger-menu-links">
-                                    <li class="burger-menu-items">Contact</li>
-                                </a>
-                            </ul>
-                        </div>
-                    </div>
                     <ul class="header-menu">
                         <li class="header-menu-items"><a href="#" class="header-menu-link">Home</a></li>
                         <li class="header-menu-items"><a href="#" class="header-menu-link">About&nbsp;us</a></li>
